# ucrt

./: .gitignore  CMakeLists.txt  README.md  sdk_license.rtf  sdk_third_party_notices.rtf
conio/: cgets.cpp  cgetws.cpp  cprintf.cpp  cputs.cpp  cputws.cpp  cscanf.cpp  getch.cpp  getwch.cpp  initcon.cpp  initconin.cpp  pipe.cpp  popen.cpp  putch.cpp  putwch.cpp
convert/: _ctype.cpp  _fptostr.cpp  _mbslen.cpp  _wctype.cpp  atof.cpp  atoldbl.cpp  atox.cpp  c16rtomb.cpp  c32rtomb.cpp  cfout.cpp  common_utf8.cpp  cvt.cpp  fcvt.cpp  fp_flags.cpp  gcvt.cpp  isctype.cpp  ismbstr.cpp  iswctype.cpp  mblen.cpp  mbrtoc16.cpp  mbrtoc32.cpp  mbrtowc.cpp  mbstowcs.cpp  mbtowc.cpp  strtod.cpp  strtox.cpp  swab.cpp  tolower_toupper.cpp  towlower.cpp  towupper.cpp  wcrtomb.cpp  wcstombs.cpp  wctomb.cpp  wctrans.cpp  wctype.cpp  xtoa.cpp
dll/: appcrt_dllmain.cpp  oswrappers.cpp
env/: environment_initialization.cpp  get_environment_from_os.cpp  getenv.cpp  getpath.cpp  putenv.cpp  searchenv.cpp  setenv.cpp
exec/: cenvarg.cpp  getproc.cpp  loaddll.cpp  spawnl.cpp  spawnlp.cpp  spawnv.cpp  spawnvp.cpp  system.cpp  wait.cpp
filesystem/: access.cpp  chmod.cpp  findfile.cpp  fullpath.cpp  makepath.cpp  mkdir.cpp  rename.cpp  rmdir.cpp  splitpath.cpp  stat.cpp  unlink.cpp  waccess.cpp  wchmod.cpp  wmkdir.cpp  wrename.cpp  wrmdir.cpp  wunlink.cpp
heap/: align.cpp  calloc.cpp  calloc_base.cpp  debug_heap.cpp  debug_heap_hook.cpp  expand.cpp  free.cpp  free_base.cpp  heap_handle.cpp  heapchk.cpp  heapmin.cpp  heapwalk.cpp  malloc.cpp  malloc_base.cpp  msize.cpp  new_handler.cpp  new_mode.cpp  realloc.cpp  realloc_base.cpp  recalloc.cpp
inc/: corecrt_internal.h  corecrt_internal_big_integer.h  corecrt_internal_fls.h  corecrt_internal_fltintrn.h  corecrt_internal_lowio.h  corecrt_internal_mbstring.h  corecrt_internal_ptd_propagation.h  corecrt_internal_securecrt.h  corecrt_internal_simd.h  corecrt_internal_state_isolation.h  corecrt_internal_stdio.h  corecrt_internal_stdio_input.h  corecrt_internal_stdio_output.h  corecrt_internal_string_templates.h  corecrt_internal_strtox.h  corecrt_internal_time.h  corecrt_internal_traits.h  corecrt_internal_win32_buffer.h
include/: assert.h  complex.h  conio.h  corecrt.h  corecrt_io.h  corecrt_malloc.h  corecrt_math.h  corecrt_memcpy_s.h  corecrt_memory.h  corecrt_search.h  corecrt_share.h  corecrt_startup.h  corecrt_stdio_config.h  corecrt_wio.h  corecrt_wprocess.h  corecrt_wstdio.h  corecrt_wstdlib.h  corecrt_wstring.h  crtdbg.h  ctype.h  direct.h  dos.h  errno.h  fcntl.h  fenv.h  float.h  fpieee.h  inttypes.h  locale.h  malloc.h  math.h  mbctype.h  mbstring.h  minmax.h  new.h  process.h  safeint_internal.h  signal.h  stddef.h  stdio.h  (+8 more)
initializers/: clock_initializer.cpp  console_input_initializer.cpp  console_output_initializer.cpp  fma3_initializer.cpp  fmode_initializer.cpp  locale_initializer.cpp  multibyte_initializer.cpp  stdio_initializer.cpp  timeset_initializer.cpp  tmpfile_initializer.cpp
internal/: CreateProcessA.cpp  FindFirstFileExA.cpp  FindNextFileA.cpp  GetModuleFileNameA.cpp  LoadLibraryExA.cpp  OutputDebugStringA.cpp  SetCurrentDirectoryA.cpp  SetEnvironmentVariableA.cpp  initialization.cpp  locks.cpp  peb_access.cpp  per_thread_data.cpp  report_runtime_error.cpp  shared_initialization.cpp  string_utilities.cpp  win_policies.cpp  winapi_thunks.cpp
locale/: CompareStringA.cpp  CompareStringW.cpp  GetLocaleInfoA.cpp  GetStringTypeA.cpp  GetStringTypeW.cpp  LCMapStringA.cpp  LCMapStringW.cpp  MultiByteToWideChar.cpp  WideCharToMultiByte.cpp  ctype.cpp  get_qualified_locale.cpp  getqloc_downlevel.cpp  glstatus.cpp  initctype.cpp  initmon.cpp  initnum.cpp  inittime.cpp  lcidtoname_downlevel.cpp  lconv_unsigned_char_initialization.cpp  locale_refcounting.cpp  locale_update.cpp  localeconv.cpp  nlsdata.cpp  setlocale.cpp  wsetlocale.cpp
lowio/: chsize.cpp  close.cpp  commit.cpp  creat.cpp  dup.cpp  dup2.cpp  eof.cpp  filelength.cpp  ioinit.cpp  isatty.cpp  locking.cpp  lseek.cpp  mktemp.cpp  open.cpp  osfinfo.cpp  read.cpp  setmode.cpp  tell.cpp  telli64.cpp  txtmode.cpp  umask.cpp  write.cpp
mbstring/: ismbalnm.cpp  ismbalph.cpp  ismbbyte.cpp  ismbdgt.cpp  ismbgrph.cpp  ismbknj.cpp  ismblgl.cpp  ismblwr.cpp  ismbprn.cpp  ismbpunc.cpp  ismbsle.cpp  ismbspc.cpp  ismbupr.cpp  mbbtype.cpp  mbccpy.cpp  mbccpy_s.cpp  mbccpy_s_l.cpp  mbclen.cpp  mbclevel.cpp  mbctype.cpp  mbsbtype.cpp  mbscat_s.cpp  mbscat_s_l.cpp  mbschr.cpp  mbscmp.cpp  mbscoll.cpp  mbscpy_s.cpp  mbscpy_s_l.cpp  mbscspn.cpp  mbsdec.cpp  mbsicmp.cpp  mbsicoll.cpp  mbsinc.cpp  mbslen.cpp  mbslen_s.cpp  mbslwr.cpp  mbsnbcat.cpp  mbsnbcat_s.cpp  mbsnbcat_s_l.cpp  mbsnbcmp.cpp  (+47 more)
misc/: _strerr.cpp  chdir.cpp  crtmbox.cpp  dbgrpt.cpp  dbgrptt.cpp  debug_fill_threshold.cpp  drive.cpp  drivemap.cpp  drivfree.cpp  errno.cpp  exception_filter.cpp  getcwd.cpp  getpid.cpp  invalid_parameter.cpp  is_wctype.cpp  perror.cpp  resetstk.cpp  set_error_mode.cpp  seterrm.cpp  signal.cpp  slbeep.cpp  strerror.cpp  syserr.cpp  systime.cpp  terminate.cpp  wperror.cpp
private/: config.h  nt.h  ucrtbase.def
startup/: abort.cpp  argv_data.cpp  argv_parsing.cpp  argv_wildcards.cpp  argv_winmain.cpp  assert.cpp  exit.cpp  initterm.cpp  onexit.cpp  thread.cpp
stdio/: _filbuf.cpp  _file.cpp  _flsbuf.cpp  _freebuf.cpp  _getbuf.cpp  _sftbuf.cpp  clearerr.cpp  closeall.cpp  fclose.cpp  fdopen.cpp  feoferr.cpp  fflush.cpp  fgetc.cpp  fgetpos.cpp  fgets.cpp  fgetwc.cpp  fileno.cpp  fopen.cpp  fputc.cpp  fputs.cpp  fputwc.cpp  fputws.cpp  fread.cpp  freopen.cpp  fseek.cpp  fsetpos.cpp  ftell.cpp  fwrite.cpp  gets.cpp  gettemppath.cpp  getw.cpp  input.cpp  ncommode.cpp  openfile.cpp  output.cpp  printf_count_output.cpp  puts.cpp  putw.cpp  putws.cpp  rewind.cpp  (+9 more)
stdlib/: abs.cpp  bsearch.cpp  bsearch_s.cpp  byteswap.cpp  div.cpp  imaxabs.cpp  imaxdiv.cpp  labs.cpp  ldiv.cpp  lfind.cpp  lfind_s.cpp  llabs.cpp  lldiv.cpp  lsearch.cpp  lsearch_s.cpp  qsort.cpp  qsort_s.cpp  rand.cpp  rand_s.cpp  rotl.cpp  rotr.cpp
string/: memccpy.c  memcpy_s.cpp  strcat.c  (+66 more)
(+51 files in other folders)
